Use Java 17 compatible code in tests